# JPEGC

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  vcpkg.json
.github/workflows/: cmake.yml
JPEGC/: CMakeLists.txt  JPEGC.cpp  JPEGC.h  imageproc.ixx
testbench/: Cargo.toml  build.rs  build_flag
testbench/src/: main.rs
