[package]
name = "testbench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
ordered-float = "3.6.0"
plotters = "0.3"
rayon = "1.7.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
[build-dependencies]
fs_extra ="*"
